--- a/Tutorial/index.html
+++ b/Tutorial/index.html
@@ -10,7 +10,7 @@
         <h1>Welcome to my page</h1>
     </div>
     <div>
-        <p>lorem</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi sapiente eius ipsam dolorum doloremque ad est, eaque in possimus similique quam ullam maxime omnis voluptate nihil fugiat, necessitatibus laboriosam nemo!</p>
     </div>
 </body>
 </html>
