My first webpage

--- a/module2_activity/Module2_Activity.html
+++ b/module2_activity/Module2_Activity.html
@@ -1,5 +1,3 @@
-again i changed some things
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +27,7 @@ again i changed some things
         </section>
         <section>
             <h2><span style="font-size: xx-large;">My Information</span></h2>
-            <img src="c:\Users\Kuro\Downloads\Cat.jpg" alt="Just a Cat" height="190px">
+            <img src="Cat.jpg" alt="Just a Cat" height="190px">
         </section>
         <section>
             <p>
